--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+html, body, #root{
+  height: 100vh;
+}
+
+#app {
   text-align: center;
+  width: 100vw;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav {
+  height: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label {
+  position: relative;
+  top: -3px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.array {
+  height: 90%;
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.list-element {
+  display: inline-block;
+  box-sizing: border-box;
+  vertical-align: top;
+  background-color: orange;
+  border: 1px solid black;
+  margin-left: -1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
