--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html, body, #root{
 
 .nav {
   height: 5%;
+  vertical-align: center;
 }
 
 label {
@@ -19,19 +20,21 @@ label {
 
 .array {
   height: 90%;
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
   text-align: center;
   padding-bottom: 0;
 }
 
-.list-element {
+.array-element {
   display: inline-block;
   box-sizing: border-box;
   vertical-align: top;
   background-color: orange;
   border: 1px solid black;
   margin-left: -1px;
+  overflow: hidden;
 }
+
 
 
