--- a/src/Dropdown.css
+++ b/src/Dropdown.css
@@ -14,6 +14,12 @@
     cursor: pointer;
     box-sizing: border-box;
     text-align: center;
+    transition: background 250ms ease-in-out, 
+                transform 150ms ease;
+}
+
+.dropbtn:active {
+    transform: scale(0.97);
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -36,6 +42,8 @@
     color: black;
     padding: 12px 16px;
     display: block;
+    transition: background 250ms ease-in-out, 
+                transform 150ms ease;
 }
 
 .dropdown-content div:hover {
