--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,8 @@ input[type=range] {
   cursor: grab;
 }
 
-strong {
-  display: inline-block;
-  padding: 0px 10px;
-  box-sizing: border-box;
+input[type=range]:active {
+  cursor: grabbing;
 }
 
 .nav {
@@ -33,7 +31,6 @@ strong {
   text-align: left;
   background-color: #3498DB;
   color: white;
-  padding: 0 3px;
 }
 
 .nav-item {
